--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 ﻿{
-	"name": "Kanna's Quality of Life",
+	"name": "KannasQualityofLife",
 	"version_number": "0.1.0",
 	"website_url": "https://github.com/SylmarDev/MaxQoL",
 	"description": "Collection of changes to make gameplay more consistently enjoyable.",
