Update Manifest and readme to 0.2.0

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 ﻿{
 	"name": "KannasQualityofLife",
-	"version_number": "0.1.0",
-	"website_url": "https://github.com/SylmarDev/MaxQoL",
-	"description": "Collection of changes to make gameplay more consistently enjoyable.",
+	"version_number": "0.2.0",
+	"website_url": "https://github.com/SylmarDev/RoR2-KannasQualityOfLife",
+	"description": "Collection of changes to make gameplay more consistently enjoyable. Now configurable!",
 	"dependencies": [
 		"tristanmcpherson-R2API-4.4.1"
 	]
