--- a/KannaQoL/KannaQoL.csproj
+++ b/KannaQoL/KannaQoL.csproj
@@ -14,17 +14,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
+		<PackageReference Include="BepInEx.Analyzers" Version="1.0.8">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="BepInEx.Core" Version="5.4.19" />
+		<PackageReference Include="BepInEx.Core" Version="5.4.21" />
 		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.4-r.0" />
 		<PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
 		<PackageReference Include="MMHOOK.RoR2" Version="2022.4.19">
 			<NoWarn>NU1701</NoWarn>
 		</PackageReference>
-		<PackageReference Include="R2API" Version="4.4.1" />
+		<PackageReference Include="R2API.Director" Version="2.1.0"></PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -54,10 +54,6 @@
 		</Reference>
 		<Reference Include="ProBuilderMeshOps">
 			<HintPath>libs\ProBuilderMeshOps.dll</HintPath>
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="R2API">
-			<HintPath>libs\R2API.dll</HintPath>
 			<Private>false</Private>
 		</Reference>
 		<Reference Include="Rewired_Windows_Lib">
